<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@color/lightPurple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_go_infinity_quiz"
                android:textSize="@dimen/titleOfThePage" />

            <TextView
                style="@style/QuestionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionOne" />


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q1option1"
                    style="@style/optionAnswer"
                    android:onClick="clickQ1"
                    android:text="@string/Q1_option1" />

                <RadioButton
                    android:id="@+id/q1option2"
                    style="@style/optionAnswer"
                    android:onClick="clickQ1"
                    android:text="@string/Q1_option2" />

                <RadioButton
                    android:id="@+id/q1option3"
                    style="@style/optionAnswer"
                    android:onClick="clickQ1"
                    android:text="@string/Q1_option3" />

                <RadioButton
                    android:id="@+id/q1option4"
                    style="@style/optionAnswer"
                    android:onClick="clickQ1"
                    android:text="@string/Q1_option4" />

            </RadioGroup>

            <TextView
                style="@style/QuestionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionTwo" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q2option1"
                    style="@style/optionAnswer"
                    android:onClick="clickQ2"
                    android:text="@string/Q2_option1" />

                <RadioButton
                    android:id="@+id/q2option2"
                    style="@style/optionAnswer"
                    android:onClick="clickQ2"
                    android:text="@string/Q2_option2" />

                <RadioButton
                    android:id="@+id/q2option3"
                    style="@style/optionAnswer"
                    android:onClick="clickQ2"
                    android:text="@string/Q2_option3" />

                <RadioButton
                    android:id="@+id/q2option4"
                    style="@style/optionAnswer"
                    android:onClick="clickQ2"
                    android:text="@string/Q2_option4" />

            </RadioGroup>

            <TextView
                style="@style/QuestionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionThree" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q3option1"
                    style="@style/optionAnswer"
                    android:onClick="clickQ3"
                    android:text="@string/Q3_option1" />

                <RadioButton
                    android:id="@+id/q3option2"
                    style="@style/optionAnswer"
                    android:onClick="clickQ3"
                    android:text="@string/Q3_option2" />

                <RadioButton
                    android:id="@+id/q3option3"
                    style="@style/optionAnswer"
                    android:onClick="clickQ3"
                    android:text="@string/Q3_option3" />

                <RadioButton
                    android:id="@+id/q3option4"
                    style="@style/optionAnswer"
                    android:onClick="clickQ3"
                    android:text="@string/Q3_option4" />

            </RadioGroup>

            <TextView
                style="@style/QuestionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionFour" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q4option1"
                    style="@style/optionAnswer"
                    android:onClick="clickQ4"
                    android:text="@string/Q4_option1" />

                <RadioButton
                    android:id="@+id/q4option2"
                    style="@style/optionAnswer"
                    android:onClick="clickQ4"
                    android:text="@string/Q4_option2" />

                <RadioButton
                    android:id="@+id/q4option3"
                    style="@style/optionAnswer"
                    android:onClick="clickQ4"
                    android:text="@string/Q4_option3" />

                <RadioButton
                    android:id="@+id/q4option4"
                    style="@style/optionAnswer"
                    android:onClick="clickQ4"
                    android:text="@string/Q4_option4" />

            </RadioGroup>

            <TextView
                style="@style/QuestionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionFive" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q5option1"
                    style="@style/optionAnswer"
                    android:onClick="clickQ5"
                    android:text="@string/Q5_option1" />

                <RadioButton
                    android:id="@+id/q5option2"
                    style="@style/optionAnswer"
                    android:onClick="clickQ5"
                    android:text="@string/Q5_option2" />

                <RadioButton
                    android:id="@+id/q5option3"
                    style="@style/optionAnswer"
                    android:onClick="clickQ5"
                    android:text="@string/Q5_option3" />

                <RadioButton
                    android:id="@+id/q5option4"
                    style="@style/optionAnswer"
                    android:onClick="clickQ5"
                    android:text="@string/Q5_option4" />
            </RadioGroup>

            <TextView
                style="@style/QuestionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionSix" />

            <CheckBox
                android:id="@+id/q6option1"
                style="@style/optionAnswer"
                android:layout_marginTop="@dimen/margin"
                android:onClick="clickQ6"
                android:text="@string/Q6_option1" />

            <CheckBox
                android:id="@+id/q6option2"
                style="@style/optionAnswer"
                android:onClick="clickQ6"
                android:text="@string/Q6_option2" />

            <CheckBox
                android:id="@+id/q6option3"
                style="@style/optionAnswer"
                android:onClick="clickQ6"
                android:text="@string/Q6_option3" />

            <CheckBox
                android:id="@+id/q6option4"
                style="@style/optionAnswer"
                android:onClick="clickQ6"
                android:text="@string/Q6_option4" />

            <TextView
                style="@style/QuestionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionSeven" />

            <EditText
                android:id="@+id/q7_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/currentPM"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="horizontal">

            <Button
                style="@style/lastButton"
                android:layout_marginEnd="@dimen/margin"
                android:onClick="submit"
                android:layout_marginRight="@dimen/margin"
                android:text="@string/submit" />

            <Button
                style="@style/lastButton"

                android:text="@string/reset" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>